options are now at the end of each calculator

--- a/manual.tex
+++ b/manual.tex
@@ -27,13 +27,14 @@
 \definecolor{invisiblegray}{rgb}{.97,0.97,0.97}
 
 \usepackage
-[dvips, %dvipdf, %or dvips or pdftex 
+[ps2pdf, %dvips, %dvipdf, %or dvips or pdftex 
 pagebackref, %or backref
 breaklinks,
 colorlinks=true,
 linkcolor=webgreen, %defined below
 filecolor=webbrown, %defined below
 citecolor=webgreen, %defined below
+urlcolor=magenta,
 pdftitle={VOTCA-CT manual},
 pdfauthor={},
 pdfsubject={VOTCA-CTP},
