--- a/theory/reorganization_energy.tex
+++ b/theory/reorganization_energy.tex
@@ -10,8 +10,8 @@ If intramolecular vibrational modes of the two molecules are treated classically
 
 \begin{figure}
    \centering
-   \includegraphics[width=0.7\linewidth]{fig/reorganization_energy/monomer_parabolas}
-    \caption{Potential energy surfaces of (a) donor and (b) acceptor in charged and neutral states. After the change of the charge state both molecules relax their nuclear coordinates. If all vibrational modes are treated classically, the total internal reorganization energy and the internal energy difference of the electron transfer reaction are $\lambda_{ij}^\text{int} = \lambda_{i}^\text{cn} + \lambda_{j}^\text{nc}$ and $\Delta E_{ij}^\text{int} =  \Delta U_i - \Delta U_j$, respectively.}
+   \includegraphics[width=0.6\linewidth]{fig/reorganization_energy/monomer_parabolas}
+    \caption{Potential energy surfaces of (a) donor and (b) acceptor in charged and neutral states. After the change of the charge state both molecules relax their nuclear coordinates. If all vibrational modes are treated classically, the total internal reorganization energy and the internal energy difference of the electron transfer reaction are $\lambda_{ij}^\text{int} = \lambda_{i}^{cn} + \lambda_{j}^{nc}$ and $\Delta E_{ij}^\text{int} =  \Delta U_i - \Delta U_j$, respectively.}
    \label{fig:parabolas}
 \end{figure}
 
