backreference to the theory added

--- a/reference/reference.tex
+++ b/reference/reference.tex
@@ -43,7 +43,7 @@ File \xmloptions lists all options needed to run a specific calculator. The form
 }
 \vfill
 
-\subsection{Calculator options}
+\subsection{Common options}
 \rowcolors{1}{invisiblegray}{white}
 {\small 
 \input{reference/xml/options.xml}
