--- a/theory/correlations.tex
+++ b/theory/correlations.tex
@@ -1,4 +1,6 @@
 \subsection{Spatial correlations of energetic disorder}
+\label{sec:ecorrelation}
+
 Long-range, e.g. electrostatic and polarization, interactions often result in spatially correlated disorder~\cite{dunlap_charge-dipole_1996}, which affects the onset of the mobility-field (Poole-Frenkel) dependence~\cite{derrida_velocity_1983,novikov_essential_1998,nagata_atomistic_2008}.    
 
 To quantify the degree of correlation, one can calculate the spatial correlation function of $E_i$ and $E_j$ at a distance $r_{ij}$
