bug in the xml2t script

--- a/theory/analysis.tex
+++ b/theory/analysis.tex
@@ -53,6 +53,8 @@ If the system is in thermodynamic equilibrium, that is without sources or sinks 
 It can be used to test whether the system is ergodic or not by correlating $\log p_i$ and the site energy $E_i$. Indeed, if $\lambda_{ij} = \lambda_{ji}$ the ratios of forward and backward rates are determined solely by the energetic disorder, $\omega_{ji} / \omega_{ij} = \exp(-\Delta E_{ij} / k_\text{B} T)$ (see \equ{marcus}).
 
 \subsection{Current}
+\label{sec:vaverage}
+
 If the position of the charge, $\vec{r}$, is an observable, the time evolution of its average $\left<\vec{r}\right>$ is the total current in the system
 \begin{equation}
  \vec{J} = e \left< \vec{v} \right> = e \frac{d \left< \vec{r}
