--- a/theory/moo.tex
+++ b/theory/moo.tex
@@ -1,5 +1,5 @@
 \subsection{Semiempirical methods}
-\label{sec:moo}
+\label{sec:izindo}
 
 \newcommand{\moo}{MOO\xspace}
 \index{electronic coupling!ZINDO}
