hgid added and small bug fixes

--- a/manual.tex
+++ b/manual.tex
@@ -21,6 +21,7 @@
 \usepackage[toc,page]{appendix}
 \usepackage{lineno}
 \usepackage{makeidx}
+\usepackage{palatino}
 
 \definecolor{webgreen}{rgb}{0,.5,0}
 \definecolor{webbrown}{rgb}{.6,0,0}
@@ -92,6 +93,8 @@ pdfpagemode=UseNone]{hyperref}
 \mainmatter
 
 \printindex
+\vfill
+
 \linenumbers
 
 \include{theory/introduction}
