--- a/theory/kmc.tex
+++ b/theory/kmc.tex
@@ -1,6 +1,6 @@
 \section{Master equation}
 \label{sec:kmc}
-
+\index{kinetic Monte Carlo}
 Having determined the list of conjugated segments (hopping sites) and charge transfer rates between them, the next task is to solve the master equation which describes the time evolution of the system
 %
 \begin{equation}
