--- a/titlepage.tex
+++ b/titlepage.tex
@@ -10,17 +10,17 @@
 \vspace*{3cm}
 \center{\includegraphics[width=0.6\columnwidth]{fig/logo}}
 \vspace*{1cm}
+\vfill
 
-%\center{\footnotesize{compiled from: \hgid}}
+\center{\footnotesize{compiled from: \hgid}}
 %\center{\footnotesize{Programs version: \refhgid}}
 %\vspace*{1cm}
 %\center{
 %\large{\copyright \hspace*{0.1cm} VOTCA development team}
 %}
-%\vspace*{0.5cm}
-\vfill
+\vspace*{0.5cm}
 \center{\large{\today}} \\
-% %\vspace*{-0.3cm}
+\vspace*{0.3cm}
 \htmladdnormallink{\color{black}\large{www.votca.org}}{http://www.votca.org}
 \end{titlepage}
 
