--- a/newcommands.tex
+++ b/newcommands.tex
@@ -1,3 +1,5 @@
+\input{hgid}
+
 \newcommand{\equ}[1]{eq.~\eqref{equ:#1}}
 \newcommand{\Equ}[1]{Eq.~\eqref{equ:#1}}
 \newcommand{\fig}[1]{figure~\ref{fig:#1}}
