--- a/theory/correlations.tex
+++ b/theory/correlations.tex
@@ -1,6 +1,6 @@
 \subsection{Spatial correlations of energetic disorder}
 \label{sec:ecorrelation}
-
+\index{site energy!spatial correlation}
 Long-range, e.g. electrostatic and polarization, interactions often result in spatially correlated disorder~\cite{dunlap_charge-dipole_1996}, which affects the onset of the mobility-field (Poole-Frenkel) dependence~\cite{derrida_velocity_1983,novikov_essential_1998,nagata_atomistic_2008}.    
 
 To quantify the degree of correlation, one can calculate the spatial correlation function of $E_i$ and $E_j$ at a distance $r_{ij}$
@@ -14,7 +14,7 @@ where $\langle E\rangle$ is the average site energy. $C(r_{ij})$ is zero if $E_i
 
 For systems with spatial correlations, variations in site energy differences, $\Delta E_{ij}$, of pairs of molecules from the neighbor list are smaller than variations in site energies, $E_i$, of all individual molecules. Since only neighbor list pairs affect transport, the distribution of $\Delta E_{ij}$ rather than that of individual site energies, $E_i$, should be used to characterize energetic disorder.
 
-calc{ecorrelation} takes into account all contributions to the site energy disorder 
+Note that the \calc{ecorrelation} calculator takes into account {\em all} contributions to the site energies 
 \vskip 0.2cm
 {\noindent \small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe \calc{ecorrelation} }
 
