--- a/theory/reorganization_energy.tex
+++ b/theory/reorganization_energy.tex
@@ -4,7 +4,7 @@
 The reorganization energy\index{reorganization energy} $\lambda_{ij}$ takes into account the change in  nuclear (and dielectric) degrees of freedom as the charge moves from donor $i$ to acceptor $j$. It has two contributions: intramolecular, $\lambda^\text{int}_{ij}$, which is due to reorganization of nuclear coordinates of the two molecules forming the charge transfer complex, and intermolecular (outersphere), $\lambda^\text{out}_{ij}$, which is due to the relaxation of the nuclear coordinates of the environment. In what follows we discuss how these contributions can be calculated.
 
 \subsection{Intramolecular reorganization energy}
-\label{sec:inner_reorganization}
+\label{sec:reorganization}
 \index{reorganization energy!intramolecular}
 If intramolecular vibrational modes of the two molecules are treated classically, the rearrangement of their nuclear coordinates after charge transfer results in the dissipation of the internal reorganization energy, $\lambda_{ij}^\text{int}$. It can be computed from four points on the potential energy surfaces (PES) of both molecules in neutral and charged states, as indicated in \fig{parabolas}. 
 
@@ -30,7 +30,7 @@ Intramolecular reorganization energies for discharging ($\lambda^{cn}$) and char
 
 \subsection{Outersphere reorganization energy}
 \index{reorganization energy!outersphere}
-\label{sec:outer_reorganization}
+\label{sec:eoutersphere}
 During the charge transfer reaction, also the molecules outside the charge transfer complex reorient and polarize in order to adjust for changes in electric potential, resulting in the outersphere contribution to the reorganization energy. $\lambda_{ij}^\text{out}$ is particularly important if charge transfer occurs in a polarizable environment. Assuming that charge transfer is much slower than electronic polarization but much faster than nuclear rearrangement of the environment, $\lambda_{ij}^\text{out}$ can be calculated from the electric displacement fields created by the charge transfer complex~\cite{may_charge_2003}
 \begin{equation}
 \lambda_{ij}^\text{out}=
