--- a/newcommands.tex
+++ b/newcommands.tex
@@ -26,8 +26,8 @@
 \newcommand{\calculator}{\hyperref[sec:calculators]{calculator}\xspace}
 
 \newcommand{\xmloptions}{\texttt{options.xml}\xspace}
-\newcommand{\xmlcsg}{\texttt{map.xml}\xspace}
-\newcommand{\xmlsegments}{\texttt{segments.xml}\xspace}
+\newcommand{\xmlcsg}{\hyperref[sec:xmlmap]{\texttt{map.xml}}\xspace}
+\newcommand{\xmlsegments}{\hyperref[sec:xmlsegments]{\texttt{segments.xml}}\xspace}
 \newcommand{\sqlstate}{\texttt{state.db}\xspace}
 \newcommand{\topology}{\texttt{topol.tpr}\xspace}
 \newcommand{\trajectory}{\texttt{traj.xtc}\xspace}
