--- a/theory/workflow.tex
+++ b/theory/workflow.tex
@@ -1,7 +1,7 @@
 \section{Workflow}
 \label{sec:wokflow}
 
-A typical workflow of charge transport simulations is depicted in \fig{workflow}. The first step is the simulation of an \slink{morphology}{atomistic morphology}, which is then partitioned on \slink{conjugated_segments}{hopping sites}. The coordinates of the hopping sites are used to construct a list of pairs of molecules, or \slink{neighborlist}{neighbor list}. 
+A typical workflow of charge transport simulations is depicted in \fig{workflow}. The first step is the simulation of an \slink{morphology}{atomistic morphology}, which is then partitioned on \slink{segments}{hopping sites}. The coordinates of the hopping sites are used to construct a list of pairs of molecules, or \slink{neighborlist}{neighbor list}. 
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{fig/workflow/workflow}
