--- a/reference/reference.tex
+++ b/reference/reference.tex
@@ -25,25 +25,9 @@ File \xmloptions lists all options needed to run a specific calculator. The form
 \input{reference/calculators/all}
 \vfill
 
-\section{Options}
+\section{Common options}
 \label{ref:options}
 %\setdefaultleftmargin{0.8em}{0.8em}{0.8em}{0.8em}{0.8em}{0.8em}
-
-\subsection{Mapping file}
-\rowcolors{1}{invisiblegray}{white}
-{\small 
-\input{reference/xml/map.xml}
-}
-\vfill
-
-\subsection{Conjugated segments}
-\rowcolors{1}{invisiblegray}{white}
-{\small 
-\input{reference/xml/segments.xml}
-}
-\vfill
-
-\subsection{Common options}
 \rowcolors{1}{invisiblegray}{white}
 {\small 
 \input{reference/xml/options.xml}
