--- a/theory/moo.tex
+++ b/theory/moo.tex
@@ -10,7 +10,7 @@ The main advantage of the molecular orbital overlap (\moo) library is {\em fast}
 
 \moo can be used both in a \slink{moo_standalone}{sandalone mode} and as an \calc{izindo} \calculator of the \votcactp. 
 
-Since \moo constructs the Fock operator of a dimer from the  molecular orbitals of monomers by translating and rotating the orbitals of \slink{conjugated_segments}{rigid fragments}, the optimized geometry of all \slink{conjugated_segments}{conjugated segments} and the coefficients of the molecular orbitals are required as its input in addition to the state file (\sqlstate) with the \slink{neighborlist}{neighbor list}. Coordinates are stored in \xyz files with four columns, first being the atom type and the next three atom coordinates. This is a standard \texttt{xyz} format without a header. Note that the atom order in the \xyz files can be different from that of the mapping files. The correspondence between the two is established in the \xmlsegments file.
+Since \moo constructs the Fock operator of a dimer from the  molecular orbitals of monomers by translating and rotating the orbitals of \slink{segments}{rigid fragments}, the optimized geometry of all \slink{segments}{conjugated segments} and the coefficients of the molecular orbitals are required as its input in addition to the state file (\sqlstate) with the \slink{neighborlist}{neighbor list}. Coordinates are stored in \xyz files with four columns, first being the atom type and the next three atom coordinates. This is a standard \texttt{xyz} format without a header. Note that the atom order in the \xyz files can be different from that of the mapping files. The correspondence between the two is established in the \xmlsegments file.
 
 The transfer integrals are saved to the \sqlstate file:
 
