--- a/newcommands.tex
+++ b/newcommands.tex
@@ -33,7 +33,7 @@
 \newcommand{\trajectory}{\texttt{traj.xtc}\xspace}
 
 \newcommand{\opt}{\texttt{{ -}-opt}\xspace}
-\newcommand{\seg}{\texttt{{ -}-s}\xspace}
+\newcommand{\seg}{\texttt{{ -}s}\xspace}
 \newcommand{\sql}{\texttt{{ -}-db}\xspace}
 \newcommand{\exe}{\texttt{{ -}-exec}\xspace}
 \newcommand{\tpl}{\texttt{{ -}-top}\xspace}
