--- a/input/topology_coarsegrained.tex
+++ b/input/topology_coarsegrained.tex
@@ -4,20 +4,31 @@
 The mapping file (referred here as \xmlcsg) is used by the program \ctpmap to convert an atomistic trajectory to a coarse-grained one. The coarse-grained trajectory contains positions, names, types, and orientations of rigid fragments. \xmlcsg contains definitions of rigid fragments (coarse-grained beads) and identifies to what conjugated segment a particular rigid fragment belongs. The description of the mapping options is given in table \ref{tab:map}. An example of \xmlcsg for a \dcvt molecule is shown in listing~\ref{list:map}. 
 
 \begin{table}[ht]
-\caption{Description of the \xml mapping file.}
 \label{tab:map}
-\rowcolors{1}{invisiblegray}{white} {\small \input{reference/xml/map.xml}}
+\caption{Description of the \xml mapping file (\xmlcsg).}
+\rowcolors{1}{invisiblegray}{white} {\footnotesize \input{reference/xml/map.xml}}
 \end{table}
-
 \vfill
-
+% Define new language for listings.
+\lstdefinelanguage{MXML} {
+   basicstyle=\ttfamily\scriptsize,
+   sensitive=true,
+   morecomment=[s][\color{gray}\rmfamily\itshape]{<!--}{-->}, 
+   showstringspaces=false,
+   numberstyle=\scriptsize,
+   numberblanklines=true,
+   showspaces=false,
+   breaklines=true,
+   showtabs=false,
+   alsoletter={:},
+   keywords = [1]
+   { name,cg_molecule,cg_beads,cg_bead,crgunitname,bead,beads,type,topology,name,ident,maps,map,mapping,weights,position,qm,symmetry },
+   keywordstyle={[1]\color{blue}},
+}
 \lstinputlisting[
- language=XML,
- basicstyle=\ttfamily\scriptsize,
- commentstyle=\color{gray}\ttfamily,
- label=list:map, 
- morekeywords={cg_molecule,cg_beads,cg_bead,crgunitname,bead,beads,type,topology,name,ident,maps,map,mapping,weights,position,qm,symmetry},
+ language=MXML,
+ label=list:map,
  caption={Examle of \xmlcsg for \dcvt. Each rigid fragment (coarse-grained bead) is defined by a list of atoms. Atom numbers, names, and residue names should correspond to those used in \gromacs topology (see the corresponing listing \ref{list:pdb} of the pdb file).}]%
-{./input/map.xml}
+{./input/dcv2t/map.xml}
 
-\vfill
+\clearpage
