--- a/input/topology_conjseg.tex
+++ b/input/topology_conjseg.tex
@@ -1,30 +1,34 @@
 \section{Conjugated segments}
 \label{sec:xmlsegments}
-
 The file describing hopping sites, or conjugated segments, is used by practically all programs and calculators. It links the coarse-grained trajectory (positions and orientations of rigid fragments) and quantum-mechanical descriptions of all conjugated segments. The description of this \xml file (\xmlsegments) is given in table \ref{tab:segments}. An example for \dcvt is shown in listing~\ref{list:segments}.
-
+%
 \begin{table}[h]
 \caption{Description of conjugated segments (\xmlsegments).} 
 \label{tab:segments}
-\rowcolors{1}{invisiblegray}{white} {\small \input{reference/xml/segments.xml} }
+\rowcolors{1}{invisiblegray}{white} {\footnotesize \input{reference/xml/segments.xml} }
 \end{table}
-
-\lstset{
-  language=XML,
-  frame=lines,
-  basicstyle=\ttfamily\footnotesize,
-  identifierstyle=\color{red},
-  keywordstyle=\color{blue},
-  showstringspaces=false,
-  columns=fullflexible,
-  commentstyle=\color{gray}\rmfamily\itshape,
-  morekeywords={segments,segment,coordinates,orbitals,basisset,torbital,reorganization,qneutral,qcharged,energy,beadconj,molname,name,map,weights},
+%
+\lstdefinelanguage{MXML} {
+   basicstyle=\ttfamily\scriptsize,
+   sensitive=true,
+   morecomment=[s][\color{gray}\rmfamily\itshape]{<!--}{-->}, 
+   showstringspaces=false,
+   numberstyle=\scriptsize,
+   numberblanklines=true,
+   showspaces=false,
+   breaklines=true,
+   showtabs=false,
+   alsoletter={:},
+   keywords = [1]
+{segments,segment,coordinates,orbitals,basisset,torbital,reorg_charging,reorg_discharging,qneutral,qcharged,energy,beadconj,molname,name,map,weights},   
+  keywordstyle={[1]\color{blue}},
 }
-
+%
 \lstinputlisting[
- label=list:segments, 
+ language=MXML,
+ label=list:segments,
  caption={\small \xml file describing \slink{segments}{conjugated segments}. Note that the mapping and weights for each segment are separated by a colon. 
 }]%
-{./input/segments.xml}
+{./input/dcv2t/segments.xml}
 
 
