small changes - state file

--- a/input/statefile.tex
+++ b/input/statefile.tex
@@ -1,2 +1,18 @@
 \section{State file}
 \label{sec:statefile}
+
+Writes out the following pair properties to sqlite3 format:
+
+ - Distance between sites i and j in the pair in nm.
+ - Distance vector coordinates x,y,z in nm.
+ - Transfer integral in eV (or the effective value if more frontier orbitals are involved)
+ - Intramolecular reorganization energy in eV.
+ - Outer sphere reorganization energy in eV.
+
+Writes out the following site properties to sqlite3 format:
+
+ - Site energy in eV
+ - Site occupation probability
+ - Coordinates x,y,z of the center of mass in nm
+
+See \calc{sqlwriter}.
