--- a/newcommands.tex
+++ b/newcommands.tex
@@ -46,6 +46,7 @@
 \newcommand{\overlap}{\hyperref[prog:moo_overlap]{\texttt{moo\_overlap}}\xspace}
 \newcommand{\ctprun}{\hyperref[prog:ctp_run]{\texttt{ctp\_run}}\xspace}
 \newcommand{\ctpmap}{\hyperref[prog:ctp_map]{\texttt{ctp\_map}}\xspace}
+\newcommand{\ctpdipro}{\hyperref[prog:ctp_dipro]{\texttt{ctp\_dipro}}\xspace}
 
 \newcommand{\suggestion}[1]{{\color{red}SUGGESTION: #1}}
 
