--- a/theory/rate.tex
+++ b/theory/rate.tex
@@ -34,7 +34,7 @@ The main assumptions in eq.~(\ref{equ:marcus}) are non-adiabaticity (small elect
 
 A more general, quantum-classical expression for a bimolecular multi-channel rate is derived in the Supporting Information of ref.~\cite{ruehle_microscopic_2011} and has the following form
 
-\begin{eqnarray}
+\begin{align}
  \omega_{ij}= \frac{2\pi}{\hbar}  \frac{|J_{ij}|^2}{\sqrt{4\pi \lambda_{ij}^\text{out} k_\text{B}T}}
  \sum_{\indM',\indN'=0}^\infty
  |\lb{\chi_{i0}^c}\rbt{\chi_{i\indM'}^n}|^2 |\lb{\chi_{j0}^n}\rbt{\chi_{j\indN'}^c}|^2
@@ -43,7 +43,7 @@ A more general, quantum-classical expression for a bimolecular multi-channel rat
 \left\{ -\frac{ \left[ \Delta E_{ij}-\hbar(\indM'\omega_i^n+\indN'\omega_j^c) -\lambda_{ij}^\text{out} \right]^2}{4\lambda_{ij}^\text{out} k_\text{B}T}
 \right\} .
 \label{equ:jjortner}
-\end{eqnarray}
+\end{align}
 If the curvatures of intramolecular PES of charged and neutral states of a molecule are different, that is $\omega_i^c\neq\omega_i^n$, the corresponding reorganization energies, $\lambda_i^{cn}=\frac{1}{2}[\omega_i^n(q_i^n-q_i^c)]^2$ and $\lambda_i^{nc}=\frac{1}{2}[\omega_i^c(q_i^n-q_i^c)]^2$, will also differ. In this case the Franck-Condon (FC) factors for discharging of molecule $i$ read \cite{chang_new_2005}
 \begin{align}
 %\begin{split}
