--- a/newcommands.tex
+++ b/newcommands.tex
@@ -48,6 +48,18 @@
 \newcommand{\ctpmap}{\hyperref[prog:ctp_map]{\texttt{ctp\_map}}\xspace}
 \newcommand{\ctpdipro}{\hyperref[prog:ctp_dipro]{\texttt{ctp\_dipro}}\xspace}
 
+\newcommand{\sqlite}{\texttt{sqlite3}\xspace}
+\newcommand{\sqlconjsegproperties}{\texttt{conjseg\_properties}\xspace}
+\newcommand{\sqlconjsegs}{\texttt{conjsegs}\xspace}
+\newcommand{\sqlmolecules}{\texttt{molecules}\xspace}
+\newcommand{\sqlpairintegrals}{\texttt{pairintegrals}\xspace}
+\newcommand{\sqlpairproperties}{\texttt{pairproperties}\xspace}
+\newcommand{\sqlpairs}{\texttt{pairs}\xspace}
+\newcommand{\sqlrigidfragproperties}{\texttt{rigidfrag\_properties}\xspace}
+\newcommand{\sqlrigidfrags}{\texttt{rigidfrags}\xspace}
+\newcommand{\sqlframes}{\texttt{frames}\xspace}
+
+
 \newcommand{\suggestion}[1]{{\color{red}SUGGESTION: #1}}
 
 \newcommand{\segmentref}[1]{segments.#1}
