fixed all references

--- a/manual.bib
+++ b/manual.bib
@@ -134,6 +134,22 @@
 	pages = {102--104}
 },
 
+@article{seki_electric_2001,
+	title = {Electric field dependence of charge mobility in energetically disordered materials: Polaron aspects},
+	volume = {65},
+	shorttitle = {Electric field dependence of charge mobility in energetically disordered materials},
+	url = {http://link.aps.org/doi/10.1103/PhysRevB.65.014305},
+	doi = {10.1103/PhysRevB.65.014305},
+	abstract = {In order to understand the electric-field dependence of charge mobility in molecularly doped organic materials, we consider the one-dimensional migration of carriers between sites with Gaussian energetic disorder. The transition rate of carriers to neighboring sites is assumed to be given by the Marcus rate equation. An exact analytical expression is derived, and is compared to the measured data. A phenomenological Gill{\textquoteright}s relation occurs in the intermediate region of the S-shaped field dependence of the mobility. The recently observed anomalous field dependence of the mobility, which shows that the mobility increases with field strength at low fields, passes through a maximum, and then decreases with increasing field strength, is reproduced. The increase followed by the decrease of the mobility with increasing field strength is interpreted as a result of energetic disorder and the Marcus inverted region.},
+	number = {1},
+	journal = {Physical Review B},
+	author = {Seki, Kazuhiko and Tachiya, M.},
+	month = dec,
+	year = {2001},
+	keywords = {Analytical {1D} for Marcus rates},
+	pages = {014305}
+},
+
 @article{bredas_charge-transfer_2004,
 	title = {{Charge-Transfer} and {Energy-Transfer} Processes in {?-Conjugated} Oligomers and Polymers: A Molecular Picture},
 	volume = {104},
@@ -160,6 +176,21 @@
 	month = apr,
 	year = {2007},
 	pages = {926--952}
+},
+
+@article{cordes_one-dimensional_2001,
+	title = {One-dimensional hopping transport in disordered organic solids. I. Analytic calculations},
+	volume = {63},
+	url = {http://link.aps.org/doi/10.1103/PhysRevB.63.094201},
+	doi = {10.1103/PhysRevB.63.094201},
+	abstract = {Analytic calculations are carried out for temperature and field dependences of the hopping drift mobility of charge carriers in strongly anisotropic disordered solids where transport can be treated as one dimensional. The solutions obtained are exact for hopping processes with noninteracting carriers and carrier transitions to the nearest sites in a one-dimensional chain. Only such transitions are essential in systems with strongly correlated space-energy distributions of localized states [see K. Kohary et al., following paper, Phys. Rev. B 63, 094202 (2001)]. Comparison is given for results obtained with symmetrical and asymmetrical transition rates. It is shown that mesoscopic effects play an essential role even for rather long chains with hundreds of localization sites. Moreover, not only the magnitude of the drift mobility, but also its temperature dependence is influenced by the chain length. A suggested theoretical description provides a general basis for the treatment of transport processes in one-dimensional disordered organic solids, such as columnar discotic liquid-crystalline glasses.},
+	number = {9},
+	journal = {Physical Review B},
+	author = {Cordes, H. and Baranovskii, S. D. and Kohary, K. and Thomas, P. and Yamasaki, S. and Hensel, F. and Wendorff, {J.-H.}},
+	month = jan,
+	year = {2001},
+	keywords = {Exact results for {1D} {Miller-Abrahams}},
+	pages = {094201}
 },
 
 @article{hoffman_reorganization_1996,
@@ -431,6 +462,46 @@
 	author = {May, Volkhard and K\"{u}hn, Oliver},
 	month = dec,
 	year = {2003}
+},
+
+@article{lukyanov_extracting_2010,
+	title = {Extracting nondispersive charge carrier mobilities of organic semiconductors from simulations of small systems},
+	volume = {82},
+	url = {http://link.aps.org/doi/10.1103/PhysRevB.82.193202},
+	doi = {10.1103/PhysRevB.82.193202},
+	abstract = {Predictions of charge-carrier mobilities in amorphous semiconductors often rely on charge transport simulations in microscopically sized systems, where transport is dispersive and mobilities are system-size dependent. We propose a method for extrapolating a macroscopic nondispersive mobility from the temperature dependence of a microscopic one. The method is tested on an amorphous phase of tris(8-hydroxyquinoline) aluminum, for which the temperature dependence of a microscopic hole mobility is obtained by combining molecular-dynamics simulations for generating material morphologies, electronic-structure calculations for determining charge hopping rates, and kinetic Monte Carlo simulations for studying charge dynamics. The extracted value of the nondispersive mobility and its electric field dependence agree well with the results of time-of-flight experiments.},
+	number = {19},
+	journal = {Physical Review B},
+	author = {Lukyanov, Alexander and Andrienko, Denis},
+	month = nov,
+	year = {2010},
+	pages = {193202}
+},
+
+@article{borsenberger_role_1993,
+	title = {The role of disorder on charge transport in molecularly doped polymers and related materials},
+	volume = {140},
+	url = {http://dx.doi.org/10.1002/pssa.2211400102},
+	doi = {10.1002/pssa.2211400102},
+	number = {1},
+	journal = {Physica Status Solidi A},
+	author = {Borsenberger, P. M. and Magin, E. H. and {VanAuweraer}, M. Der and Schryver, F. C. De},
+	year = {1993},
+	pages = {9--47}
+},
+
+@article{scher_anomalous_1975,
+	title = {Anomalous transit-time dispersion in amorphous solids},
+	volume = {12},
+	issn = {0556-2805},
+	url = {http://prb.aps.org/abstract/PRB/v12/i6/p2455_1},
+	doi = {10.1103/PhysRevB.12.2455},
+	number = {6},
+	journal = {Physical Review B},
+	author = {Scher, Harvey and Montroll, Elliott},
+	month = sep,
+	year = {1975},
+	pages = {2455--2477}
 },
 
 @article{novikov_cluster_1995,
