--- a/manual.tex
+++ b/manual.tex
@@ -124,7 +124,7 @@ pdfpagemode=UseNone]{hyperref}
 
 \nolinenumbers
 
-\bibliographystyle{long}
+\bibliographystyle{short}
 {\footnotesize \bibliography{literature_short} }
 
 
