--- a/theory/fragments.tex
+++ b/theory/fragments.tex
@@ -24,6 +24,7 @@ To partition the system on hopping sites \ctpmap program is used
 It reads in the \gromacs topology (\topology) and trajectory (\trajectory) files, definitions of coarse-grained beads (\xmlcsg) and conjugated segments (\xmlsegments) and outputs coordinates of hopping sites and orientations of rigid fragments to the  state file (\sqlstate).
 
 In order to check the mapping one can use the \calc{tdump} \calculator
+\label{sec:tdump}
 \vskip 0.1cm
 {\noindent \small \ctprun \csg \xmlcsg \exe \calc{tdump} }
 \vskip 0.1cm
