--- a/theory/rate.tex
+++ b/theory/rate.tex
@@ -59,7 +59,7 @@ H_{\indM'-k} \left( \frac{s_{i}}{\sqrt{2S^{cn}_i}}\right)
 \, ,
 %\end{split}
 \end{align}
-where $H_n(x)$ is a Hermite polynomial, $s_i=\frac{2\sqrt{\lambda_i^{nc}\lambda_i^{cn}}}{\hbar(\omega_i^c+\omega_i^n)}$, and $S^{cn}_i=\lambda_i^{cn}/\hbar\omega_i^c$. The FC factors for charging of molecule $j$ can be obtained by substituting $(s_i,S^{cn}_i,\omega_i^c)$ with $(-s_j,S^{nc}_j, \omega_j^n)$. In order to evaluate the FC factors, the \slink{inner_reorganization}{internal reorganization energy} $\lambda_i^{cn}$ can be computed from the intramolecular PES.
+where $H_n(x)$ is a Hermite polynomial, $s_i=2\sqrt{\lambda_i^{nc}\lambda_i^{cn}} / \hbar(\omega_i^c+\omega_i^n)$, and $S^{cn}_i=\lambda_i^{cn}/\hbar\omega_i^c$. The FC factors for charging of molecule $j$ can be obtained by substituting $(s_i,S^{cn}_i,\omega_i^c)$ with $(-s_j,S^{nc}_j, \omega_j^n)$. In order to evaluate the FC factors, the \slink{eintramolecular}{internal reorganization energy} $\lambda_i^{cn}$ can be computed from the intramolecular PES.
 
 \subsection{Semi-classical rate}
 \label{sec:rate_semiclassical}
