--- a/reference/reference.tex
+++ b/reference/reference.tex
@@ -12,8 +12,8 @@
 \label{sec:calculators}
 
 Calculator is a piece of code which computes specific system properties, such as site energies, transfer integrals, etc. \ctprun is a wrapper program which executes all calculators. The generic syntax is 
-
-  \ctprun \exe \texttt{"calc1, calc2, ..."} \opt \xmloptions
+\vskip 0.2cm
+{\noindent \small \ctprun \exe \texttt{"calc1, calc2, ..."} \opt \xmloptions }
 \vskip 0.2cm
 %
 File \xmloptions lists all options needed to run a specific calculator. The format of this file is explained in listing~\ref{list:calc}. A complete list of calculators is given in the \refcalc reference section.
@@ -21,6 +21,15 @@ File \xmloptions lists all options needed to run a specific calculator. The form
 \lstinputlisting[label=list:calc, 
  caption={\small A part of the \xmloptions file with options for the \texttt{calculator\_name\{1,2\}} \refcalc.
 }]{./reference/calculators.xml}
+
+A list of all calculators and their short descriptions can be obtain using 
+\vskip 0.1cm
+{\noindent \small \ctprun \texttt{-{}-list} }
+\vskip 0.1cm
+
+A detailed description of all options of a specific calculator(s) is available via
+\vskip 0.1cm
+{\noindent \small \ctprun \texttt{-{}-desc calc1,calc2,...} }
 
 \input{reference/calculators/calculators}
 \vfill
